--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NetmedsAndroidTestProject</string>
+    <string name="app_name">NetmedsApp</string>
 
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
