--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
+    <string name="search">Search here</string>
+    <string name="no_results_available">No results available</string>
+  <!--  <string name=""></string>
+    <string name=""></string>
+    <string name=""></string>
+    <string name=""></string>-->
 </resources>
